--- a/layout1.html
+++ b/layout1.html
@@ -349,8 +349,8 @@
                     </div>
                 </div> -->
                 <div class="contenttwo2 container-fluid   d-flex pe-0">
-                    <div class="col-lg-5 offset-lg-1 custom-container">
-                        <div class="box arrow-right mt-5 mb-5 pt-5">
+                    <div class="col-lg-6  custom-container me-0">
+                        <div class="box arrow-right mt-5 mb-5 pt-5 ">
                             <h1 class="text-white fw-bold col-lg-10 contenttwo-text">TUDJON MEG TÖBBET A KMÉ-RŐL!</h1>
                         <p class="text-white contenttwo-text2">A KMÉ-védjegy megbízható tanúsítvány, mert az "átlagos"
                             védjegyekre
@@ -360,7 +360,7 @@
                         <button type="button" class="btn btn-light ps-5 pe-5 button-main fw-bold">CSATLAKOZZON!</button>
                         </div>
                     </div>
-                    <div class="contenttwo2-image col-lg-6"></div>
+                    <div class="contenttwo2-image col-lg-7"></div>
                 </div>
             
         </div>
