--- a/layout3.html
+++ b/layout3.html
@@ -304,7 +304,7 @@
                 </div>
             </div> -->
             <div class="contenttwo2 container-fluid   d-flex pe-0">
-                <div class="col-lg-6 offset-lg-1 custom-container">
+                <div class="col-lg-6 custom-container">
                     <div class="box arrow-right mt-5 mb-5 pt-5">
                         <h1 class="text-white fw-bold col-lg-10 contenttwo-text">KEZDETEK</h1>
                         <p class="text-white contenttwo-text2">A KMÉ-védjegy az Agrárminisztérium és a Nébih közös,
@@ -316,7 +316,7 @@
                             megalapozott.</p>
                     </div>
                 </div>
-                <div class="contenttwo2-image col-lg-7"></div>
+                <div class="contenttwo2-image col-lg-6"></div>
             </div>
             
             <div class="image-bottom">
